// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats should have ids when ids is true 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "909",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.js",
      "size": 215,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.js",
    ],
  },
  "chunks": [
    {
      "auxiliaryFiles": [],
      "entry": true,
      "files": [
        "main.js",
      ],
      "id": "909",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 59,
      "type": "chunk",
    },
  ],
  "filteredModules": undefined,
  "modules": [
    {
      "chunks": [
        "909",
      ],
      "id": "876",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "size": 59,
      "type": "module",
    },
  ],
}
`;

exports[`Stats should have stats 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "909",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.js",
      "size": 215,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.js",
    ],
  },
  "chunks": [
    {
      "auxiliaryFiles": [],
      "children": [],
      "entry": true,
      "files": [
        "main.js",
      ],
      "id": "909",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "876",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "issuer": undefined,
          "issuerId": undefined,
          "issuerName": undefined,
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./fixtures/a.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "reasons": [
            {
              "moduleId": undefined,
              "moduleIdentifier": undefined,
              "moduleName": undefined,
              "type": "entry",
              "userRequest": "./fixtures/a",
            },
          ],
          "size": 59,
          "source": "module.exports = function a() {
    return "This is a";
};
",
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 59,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 215,
        },
      ],
      "assetsSize": 215,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "filteredModules": undefined,
  "hash": "34d14095787db8a1bd02",
  "logging": {},
  "modules": [
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "876",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "reasons": [
        {
          "moduleId": undefined,
          "moduleIdentifier": undefined,
          "moduleName": undefined,
          "type": "entry",
          "userRequest": "./fixtures/a",
        },
      ],
      "size": 59,
      "source": "module.exports = function a() {
    return "This is a";
};
",
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 215,
        },
      ],
      "assetsSize": 215,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/dist",
  "publicPath": "auto",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`Stats should output stats with query 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "909",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.js",
      "size": 394,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.js",
    ],
  },
  "chunks": [
    {
      "auxiliaryFiles": [],
      "children": [],
      "entry": true,
      "files": [
        "main.js",
      ],
      "id": "909",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "876",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "issuer": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "issuerId": "970",
          "issuerName": "./fixtures/c.js?c=3",
          "issuerPath": [
            {
              "id": "661",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "name": "./fixtures/abc-query.js",
            },
            {
              "id": "970",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
              "name": "./fixtures/c.js?c=3",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/a.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "reasons": [
            {
              "moduleId": "970",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
              "moduleName": "./fixtures/c.js?c=3",
              "type": "cjs require",
              "userRequest": "./a",
            },
          ],
          "size": 59,
          "source": "module.exports = function a() {
    return "This is a";
};
",
          "type": "module",
        },
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "304",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js?a=1",
          "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "issuerId": "661",
          "issuerName": "./fixtures/abc-query.js",
          "issuerPath": [
            {
              "id": "661",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "name": "./fixtures/abc-query.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/a.js?a=1",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "reasons": [
            {
              "moduleId": "661",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "moduleName": "./fixtures/abc-query.js",
              "type": "cjs require",
              "userRequest": "./a?a=1",
            },
          ],
          "size": 59,
          "source": "module.exports = function a() {
    return "This is a";
};
",
          "type": "module",
        },
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "970",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "issuerId": "661",
          "issuerName": "./fixtures/abc-query.js",
          "issuerPath": [
            {
              "id": "661",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "name": "./fixtures/abc-query.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/c.js?c=3",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/c.js",
          "reasons": [
            {
              "moduleId": "661",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "moduleName": "./fixtures/abc-query.js",
              "type": "cjs require",
              "userRequest": "./c?c=3",
            },
          ],
          "size": 79,
          "source": "module.exports = function b() {
    require("./a");
    return "This is c";
};
",
          "type": "module",
        },
        {
          "assets": [],
          "chunks": [
            "909",
          ],
          "id": "661",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "issuer": undefined,
          "issuerId": undefined,
          "issuerName": undefined,
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./fixtures/abc-query.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "reasons": [
            {
              "moduleId": undefined,
              "moduleIdentifier": undefined,
              "moduleName": undefined,
              "type": "entry",
              "userRequest": "./fixtures/abc-query",
            },
          ],
          "size": 99,
          "source": "exports.a = require("./a?a=1");
// exports.b = require("./b?b=2");
exports.c = require("./c?c=3");
",
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 296,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 394,
        },
      ],
      "assetsSize": 394,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "filteredModules": undefined,
  "hash": "bf832ad962a2a2660a1a",
  "logging": {},
  "modules": [
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "876",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "issuer": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
      "issuerId": "970",
      "issuerName": "./fixtures/c.js?c=3",
      "issuerPath": [
        {
          "id": "661",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "name": "./fixtures/abc-query.js",
        },
        {
          "id": "970",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "name": "./fixtures/c.js?c=3",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "reasons": [
        {
          "moduleId": "970",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "moduleName": "./fixtures/c.js?c=3",
          "type": "cjs require",
          "userRequest": "./a",
        },
      ],
      "size": 59,
      "source": "module.exports = function a() {
    return "This is a";
};
",
      "type": "module",
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "304",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js?a=1",
      "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "issuerId": "661",
      "issuerName": "./fixtures/abc-query.js",
      "issuerPath": [
        {
          "id": "661",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "name": "./fixtures/abc-query.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js?a=1",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "reasons": [
        {
          "moduleId": "661",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "moduleName": "./fixtures/abc-query.js",
          "type": "cjs require",
          "userRequest": "./a?a=1",
        },
      ],
      "size": 59,
      "source": "module.exports = function a() {
    return "This is a";
};
",
      "type": "module",
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "970",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
      "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "issuerId": "661",
      "issuerName": "./fixtures/abc-query.js",
      "issuerPath": [
        {
          "id": "661",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "name": "./fixtures/abc-query.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/c.js?c=3",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/c.js",
      "reasons": [
        {
          "moduleId": "661",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "moduleName": "./fixtures/abc-query.js",
          "type": "cjs require",
          "userRequest": "./c?c=3",
        },
      ],
      "size": 79,
      "source": "module.exports = function b() {
    require("./a");
    return "This is c";
};
",
      "type": "module",
    },
    {
      "assets": [],
      "chunks": [
        "909",
      ],
      "id": "661",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/abc-query.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "reasons": [
        {
          "moduleId": undefined,
          "moduleIdentifier": undefined,
          "moduleName": undefined,
          "type": "entry",
          "userRequest": "./fixtures/abc-query",
        },
      ],
      "size": 99,
      "source": "exports.a = require("./a?a=1");
// exports.b = require("./b?b=2");
exports.c = require("./c?c=3");
",
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "main.js",
          "size": 394,
        },
      ],
      "assetsSize": 394,
      "chunks": [
        "909",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/dist",
  "publicPath": "auto",
  "warnings": [],
  "warningsCount": 0,
}
`;
